--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +11,24 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <title>Hangman</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <h3 id="name">Hangman</h3>
+        <div class="letters">
+            <ul>
+
+            </ul>
+        </div>
+        <div class="question">
+            <ul>
+
+            </ul>
+        </div>
+        <div class="gallows">
+            <img id="gallows" src="" alt="">
+        </div>
+    </div>
 </body>
+
 </html>
