--- a/index.html
+++ b/index.html
@@ -5,20 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
     <link rel="stylesheet" href="css/main.css">
     <script src="js/main.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <title>Hangman</title>
 </head>
 
 <body>
     <div class="container">
-        <h3 id="name">Hangman</h3>
-        <div class="letters">
-            <ul>
-
-            </ul>
+        <h3 class="name">Hangman</h3>
+        <div id="letters_div">
         </div>
         <div class="question">
             <ul>
