--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
 <body>
     <div class="container">
         <h3 class="name">Hangman</h3>
+        <div class="buttons">
+            <div id="newGame">
+                New Game
+            </div>
+        </div>
         <div id="letters_div">
+            
         </div>
         <div class="question">
-            <ul>
-
-            </ul>
         </div>
         <div class="gallows">
             <img id="gallows" src="" alt="">
