--- a/index.html
+++ b/index.html
@@ -22,12 +22,18 @@
             </div>
         </div>
         <div id="letters_div">
-            
+
         </div>
-        <div class="question">
+        <div id="question_letters_div">
         </div>
         <div class="gallows">
-            <img id="gallows" src="" alt="">
+            <img id="gallows" src="images/gallows_0.svg" alt="">
+            <img id="gallows" src="images/gallows_1.svg" alt="">
+            <img id="gallows" src="images/gallows_2.svg" alt="">
+            <img id="gallows" src="images/gallows_3.svg" alt="">
+            <img id="gallows" src="images/gallows_4.svg" alt="">
+            <img id="gallows" src="images/gallows_5.svg" alt="">
+            <img id="gallows" src="images/gallows_6.svg" alt="">
         </div>
     </div>
 </body>
