--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
     <link rel="stylesheet" href="css/main.css">
+    <script src="js/data.js"></script>
     <script src="js/main.js"></script>
 
     <title>Hangman</title>
