--- a/index.html
+++ b/index.html
@@ -15,20 +15,24 @@
 </head>
 
 <body>
+    <h3 class="name">Hangman</h3>
+    <div class="buttons">
+        <div id="newGame">
+            New Game
+        </div>
+    </div>
     <div class="container">
-        <h3 class="name">Hangman</h3>
-        <div class="buttons">
-            <div id="newGame">
-                New Game
+        <div class="left">
+            <div id="letters_div">
+
+            </div>
+            <div id="question_letters_div">
             </div>
         </div>
-        <div id="letters_div">
-
-        </div>
-        <div id="question_letters_div">
-        </div>
-        <div class="gallows">
-            <img id="gallows" src="" alt="">
+        <div class="right">
+            <div class="gallows">
+                <img id="gallows" src="" alt="">
+            </div>
         </div>
     </div>
 </body>
