--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <h3 class="name">Hangman</h3>
+    <h3 class="title">Hangman</h3>
     <div class="buttons">
         <div id="newGame">
             New Game
@@ -23,6 +23,20 @@
     </div>
     <div class="container">
         <div class="left">
+            <div class="scoreBoard">
+                <div id="win">
+                    <div class="name">Win:</div>
+                    <div class="score"></div>
+                </div>
+                <div id="fail">
+                    <div class="name">Fail:</div>
+                    <div class="score"></div>
+                </div>
+                <div id="failure">
+                    <div class="name">Failure:</div>
+                    <div class="score"></div>
+                </div>
+            </div>
             <div id="letters_div">
 
             </div>
